# instruct-nerf2nerf-4d

./: pyproject.toml
in2n/: in2n_config.py
in2n4d/: in2n4d.py  in2n4d_config.py  in2n4d_datamanager.py  in2n4d_pipeline.py
nerfplayer-nerfstudio/nerfplayer/: nerfplayer_config.py  nerfplayer_nerfacto.py  nerfplayer_ngp.py
nerfplayer-nerfstudio/nerfplayer/cuda/csrc/: temporal_gridencoder.cu
