[project]
name = "in2n4d"
version = "0.0.1"

dependencies=[
    "nerfstudio>=0.3.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "diffusers>=0.14.0.dev0",
    "transformers>=4.26.1",
    "accelerate",
    "einops",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["in2n", "in2n4d", "nerfplayer*"]

[project.entry-points.'nerfstudio.method_configs']
in2n = 'in2n.in2n_config:in2n_method'
in2n_small = 'in2n.in2n_config:in2n_method_small'
in2n_tiny = 'in2n.in2n_config:in2n_method_tiny'
in2n_extra_tiny = 'in2n.in2n_config:in2n_method_extra_tiny'
in2n4d_extra_tiny = 'in2n4d.in2n4d_config:in2n4d_method_extra_tiny'
nerfplayer_nerfacto = 'nerfplayer_nerfacto.nerfplayer.nerfplayer_config:nerfplayer_nerfacto'
nerfplayer_ngp = 'nerfplayer_nerfacto.nerfplayer.nerfplayer_config:nerfplayer_ngp'